<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/picture"/>
    <item
        android:id="@+id/action_set_height"
        android:icon="@drawable/ic_menu_friendslist"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/set_height"/>
    <item
        android:id="@+id/action_load_polygons_url"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/load_polygons"/>
    
        <item
        android:id="@+id/last_polygon_debug"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="Check-Save"/>

</menu>